--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
 			</div>
 			
 			<span id="score-count" title="Shop">0<span class="icon-coin"></span></span>
-			<div class="card hero-card">
-				<span class="value">
-					<span class="current">15</span><span class="total">/15</span>
-				</span>
-				<img src="assets/art/cards/heros/blue_knight.png" class="illustration">
+			<div id="board">
+				<div class="card hero-card">
+					<span class="value">
+						<span class="current">15</span><span class="total">/15</span>
+					</span>
+					<img src="assets/art/cards/heros/blue_knight.png" class="illustration">
+				</div>
 			</div>
 			<div class="card card-back">
 				Deck Master
