--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
 
 		<div id="game">
 			
-			<div id="store">
+			<div id="tabs">
+				
 			</div>
-			
+			<div id="store"></div>
+
 			<div id="inv">
 				<span>Inventory</span>
 			</div>
-			
-			<span id="score-count" title="Shop">0<span class="icon-coin"></span></span>
+			<span id="score-count">0<span class="icon-coin"></span></span>
 			<div id="board">
 				<div class="card hero-card">
 					<span class="value">
