Fix inventory bug

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<p>This is your player:</p>
 		<img src="assets/art/tutorial/player.png"><br>
 		<p>
-			To move, you drag your player to a card that is 1 space away from you (Inculding diagonals.) You can also use the arrow keys or a controller (A list of supported controllers is at the bottom.)
+			To move, you drag your player to a card that is 1 space away from you (Inculding diagonals.) You can also use the arrow keys or the left joy stick on a controller (A list of supported controllers is at the bottom.)
 		</p>
 		<p>
 			If the first number in the top-left goes down to 0, you die. This is your health. It cannot go above the second number.
@@ -73,7 +73,7 @@
 			This is a coin card (yellow border). It gives you coins equal to the top-left number (value) that you can then spend on items or keep to raise your score.
 		</p>
 		<p>
-			To access the item store, click your coins in the bottom-left corner.
+			To access the item store, click your coins in the bottom-left corner. You can also press the down arrow or the Y button on a controller.
 		</p>
 
 		<img src="assets/art/tutorial/monster.png"><br>
@@ -91,7 +91,8 @@
 
 		<img src="assets/art/tutorial/item.png"><br>
 		<p>
-			This card is an item. They do diffrent things, but they can be bought from the store for coins by dragging your player to the card you want to buy (Cost is in the bottom.)
+			This card is an item. They do diffrent things, and they can be bought from the store for coins by clicking on them (Cost is in the bottom.)
+			You can also press arrow keys/left joy stick while the store is open to select a card, and then enter/the A button to buy a card.
 		</p>
 		<p>
 			You finished this tutorial! Go play the game!
