--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
 	<body>
 		<div id="main-menu">
 			<img id="title-image" src="assets/art/menu.png">
-			<span class="version">v1.1.1-beta</span>
-			<span id="play-button" class="menu-button">Play</span><br>
+			<span class="version">v1.1.2-beta</span>
+			<span id="play-button" class="menu-button">Play</span>
 			<span id="tutorial-button" class="menu-button">Tutorial</span>
+			<span id="hero-button" class="menu-button">Heroes</span>
 			<button id="high-contrast">High-Contrast</button>
 			<button id="gamepad-btn">Use Gamepad</button>
+		</div>
+
+		<div id="hero-select">
 		</div>
 
 		<div id="game">
@@ -129,6 +133,7 @@
 	<script src="assets/scripts/cards/generate.js"></script>
 	<script src="assets/scripts/animations.js"></script>
 	<script src="assets/scripts/engine.js"></script>
+	<script src="assets/scripts/heroSelect.js"></script>
 	<script src="assets/scripts/keyboard.js"></script>
 	<script src="assets/scripts/gamepad.js"></script>
 	<script src="assets/scripts/store.js"></script>
