--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 					Monster points: <span id="final-monsters">0 <span class="icon-skull"></span></span> x2<br><br>
 					Total Score: <span id="final-score">0</span>
 				</div>
-				<button class="back">Back</button>
-				<button id="upload-score">Upload score to the League</button>
+				<button class="back">Back</button><br>
+				<button id="upload-score">Upload score</button>
 			</div>
 
 			<div class="card card-back">
