--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		</div>
 
 		<div id="league">
+			<button class="back" style="position: absolute;left: 10px;">Back</button>
 			<table>
 				<thead><tr>
 					<th>Name</th>
