Store Flush (Issue #4)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<div id="main-menu">
 			<img id="title-image" src="assets/art/menu.png">
-			<span class="version">v1.2.5-beta</span>
+			<span class="version">v1.2.6-beta</span>
 			<span id="play-button" class="menu-button">Play</span>
 			<span id="tutorial-button" class="menu-button">Tutorial</span>
 			<span id="hero-button" class="menu-button">Heroes</span>
@@ -42,7 +42,9 @@
 			<div id="tabs">
 				
 			</div>
-			<div id="store"></div>
+			<div id="store">
+				<div id="flush-store">Flush store - 10<span class="icon-coin"></span></div>
+			</div>
 
 			<div id="inv">
 				<span>Inventory</span>
