--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<div id="main-menu">
 			<img id="title-image" src="assets/art/menu.png">
-			<span class="version">v1.2.6-beta</span>
+			<span class="version">v1.2.8-beta</span>
 			<span id="play-button" class="menu-button">Play</span>
 			<span id="tutorial-button" class="menu-button">Tutorial</span>
 			<span id="hero-button" class="menu-button">Heroes</span>
@@ -138,6 +138,7 @@
 		<h3>Supported Contollers</h3>
 		<ul>
 			<li>Nindendo Joy-Cons</li>
+			<li>Xbox 360/One Controller</li>
 		</ul>
 	</div>
 	<script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-app.js"></script>
