--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
 				<div id="score">
 					Coins collected: <span id="final-coins">0 <span class="icon-coin"></span></span> x10<br>
 					Monster points: <span id="final-monsters">0 <span class="icon-skull"></span></span> x2<br><br>
-					Total Score: <span id="final-score">0</span>
+					Name: <span id="save-name">No name</span><br>
+					<input type="text" id="new-name" autocomplete="off"><button id="change-name">Change</button><br>
+					Total Score: <span id="final-score">0</span><button id="upload-score">Upload</button>
 				</div>
-				<button class="back">Back</button><br>
-				<button id="upload-score">Upload score</button>
+				<br>
+				<button class="back">Home</button><br>
 			</div>
 
 			<div class="card card-back">
