--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <html>
 	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163838027-1"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() { dataLayer.push(arguments); }
+			gtag('js', new Date());
+
+			gtag('config', 'UA-163838027-1');
+		</script>
+
+
 		<link rel="stylesheet" href="main.css">
 		<title>Deck Master by OwL</title>
 
