Fix html refrence to boss.js

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<body>
 		<div id="main-menu">
 			<img id="title-image" src="assets/art/menu.png">
-			<span class="version">v1.3.1-beta</span>
+			<span class="version">v1.3.2-beta</span>
 			<span id="play-button" class="menu-button">Play</span>
 			<span id="tutorial-button" class="menu-button">Tutorial</span>
 			<span id="hero-button" class="menu-button">Heroes</span>
@@ -165,7 +165,7 @@
 	<script src="assets/scripts/cards/create.js"></script>
 	<script src="assets/scripts/cards/generate.js"></script>
 	<script src="assets/scripts/animations.js"></script>
-	<script src="assets/scripts/boss.js"></script>
+	<script src="assets/scripts/difficulty.js"></script>
 	<script src="assets/scripts/engine.js"></script>
 	<script src="assets/scripts/highscores.js"></script>
 	<script src="assets/scripts/heroSelect.js"></script>
