Prettier and add gems (Also add Stone Talus)

--- a/index.html
+++ b/index.html
@@ -1,32 +1,54 @@
 <html>
 	<head>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163838027-1"></script>
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=UA-163838027-1"
+		></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
-			function gtag() { dataLayer.push(arguments); }
-			gtag('js', new Date());
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
 
-			gtag('config', 'UA-163838027-1');
+			gtag("config", "UA-163838027-1");
 		</script>
 
-
-		<link rel="stylesheet" href="main.css">
-		<title>Deck Master by OwL</title>
+		<link rel="stylesheet" href="main.css" />
+		<title>Deck Master</title>
 
 		<!-- FAVICON -->
-		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-		<link rel="manifest" href="favicon/site.webmanifest">
-		<link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
-		<meta name="msapplication-TileColor" content="#603cba">
-		<meta name="theme-color" content="#ffffff">
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="favicon/apple-touch-icon.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="favicon/favicon-32x32.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="favicon/favicon-16x16.png"
+		/>
+		<link rel="manifest" href="favicon/site.webmanifest" />
+		<link
+			rel="mask-icon"
+			href="favicon/safari-pinned-tab.svg"
+			color="#5bbad5"
+		/>
+		<meta name="msapplication-TileColor" content="#603cba" />
+		<meta name="theme-color" content="#ffffff" />
 	</head>
 	<body>
 		<div id="main-menu">
-			<img id="title-image" src="assets/art/menu.png">
-			<span class="version">v1.3.4-beta</span>
+			<img id="title-image" src="assets/art/menu.png" />
+			<span class="version">v1.3.5-beta</span>
 			<span id="play-button" class="menu-button">Play</span>
 			<span id="tutorial-button" class="menu-button">Tutorial</span>
 			<span id="hero-button" class="menu-button">Heroes</span>
@@ -34,27 +56,27 @@
 			<button id="gamepad-btn">Use Gamepad</button>
 		</div>
 
-		<div id="hero-select">
-		</div>
+		<div id="hero-select"></div>
 
 		<div id="league">
-			<button class="back" style="position: absolute;left: 10px;">Back</button>
+			<button class="back" style="position: absolute; left: 10px;">Back</button>
 			<table>
-				<thead><tr>
-					<th>Name</th>
-					<th>Score</th>
-					<th>Date</th>
-				</tr></thead>
+				<thead>
+					<tr>
+						<th>Name</th>
+						<th>Score</th>
+						<th>Date</th>
+					</tr>
+				</thead>
 			</table>
 		</div>
 
 		<div id="game">
-			
-			<div id="tabs">
-				
-			</div>
+			<div id="tabs"></div>
 			<div id="store">
-				<div id="flush-store">Flush store - 10<span class="icon-coin"></span></div>
+				<div id="flush-store">
+					Flush store - 10<span class="icon-coin"></span>
+				</div>
 			</div>
 
 			<div id="inv">
@@ -66,7 +88,10 @@
 					<span class="value">
 						<span class="current">15</span><span class="total">/15</span>
 					</span>
-					<img src="assets/art/cards/heros/blue_knight.png" class="illustration">
+					<img
+						src="assets/art/cards/heros/blue_knight.png"
+						class="illustration"
+					/>
 				</div>
 			</div>
 
@@ -74,103 +99,128 @@
 				<h1>You died</h1>
 				<h4>By the power of <span id="monster-name"></span>.</h4>
 				<div id="score">
-					Coins collected: <span id="final-coins">0 <span class="icon-coin"></span></span> x10<br>
-					Monster points: <span id="final-monsters">0 <span class="icon-skull"></span></span> x2<br><br>
+					Coins collected:
+					<span id="final-coins">0 <span class="icon-coin"></span></span>
+					x10<br />
+					Monster points:
+					<span id="final-monsters">0 <span class="icon-skull"></span></span>
+					x2<br /><br />
 
-					<span id="total-score-text">Total Score: <span id="final-score">0</span></span><br><br>
-					<input type="text" id="save-name" autocomplete="off"><button id="upload-score">Save score</button><br>
+					<span id="total-score-text"
+						>Total Score: <span id="final-score">0</span></span
+					><br /><br />
+					<input type="text" id="save-name" autocomplete="off" /><button
+						id="upload-score"
+					>
+						Save score</button
+					><br />
 				</div>
-				<br>
-				<button class="back">Main Menu</button><br>
+				<br />
+				<button class="back">Main Menu</button><br />
 			</div>
 
 			<div class="card card-back">
 				Deck Master
-				<img src="assets/art/cards/back.png" class="illustration">
+				<img src="assets/art/cards/back.png" class="illustration" />
 			</div>
-	</div>
-	<div id="tutorial">
-		<button class="back">Back</button>
-		<h1>Tutorial</h1>
-		<p>
-			Hello Player.<br>
-			Soon you'll be battling monsters and striving against death, but I would suggest reading this first.
-		</p>
+		</div>
+		<div id="tutorial">
+			<button class="back">Back</button>
+			<h1>Tutorial</h1>
+			<p>
+				Hello Player.<br />
+				Soon you'll be battling monsters and striving against death, but I would
+				suggest reading this first.
+			</p>
 
-		<p>This is your player:</p>
-		<img src="assets/art/tutorial/player.png"><br>
-		<p>
-			To move, you drag your player to a card that is 1 space away from you (Inculding diagonals.) You can also use the arrow keys or the left joy stick on a controller (A list of supported controllers is at the bottom.)
-		</p>
-		<p>
-			If the first number in the top-left goes down to 0, you die. This is your health. It cannot go above the second number.
-		</p>
-		<p>
-			In the real game, there'll be a 3x3 grid of diffent cards to move to, containing cards of these types:
-		</p>
-		
-		<img src="assets/art/tutorial/coins.png"><br>
-		<p>
-			This is a coin card (yellow border). It gives you coins equal to the top-left number (value) that you can then spend on items or keep to raise your score.
-		</p>
-		<p>
-			To access the item store, click your coins in the bottom-left corner. You can also press the down arrow or the Y button on a controller.
-		</p>
+			<p>This is your player:</p>
+			<img src="assets/art/tutorial/player.png" /><br />
+			<p>
+				To move, you drag your player to a card that is 1 space away from you
+				(Inculding diagonals.) You can also use the arrow keys or the left joy
+				stick on a controller (A list of supported controllers is at the
+				bottom.)
+			</p>
+			<p>
+				If the first number in the top-left goes down to 0, you die. This is
+				your health. It cannot go above the second number.
+			</p>
+			<p>
+				In the real game, there'll be a 3x3 grid of diffent cards to move to,
+				containing cards of these types:
+			</p>
 
-		<img src="assets/art/tutorial/monster.png"><br>
-		<p>
-			This is a monster (green border). When you move to it, you lose health equal to its value.<br>
-		</p>
-		<p>
-			At the end of the game, your score is increased by the number and values of any monsters you killed.
-		</p>
+			<img src="assets/art/tutorial/coins.png" /><br />
+			<p>
+				This is a coin card (yellow border). It gives you coins equal to the
+				top-left number (value) that you can then spend on items or keep to
+				raise your score.
+			</p>
+			<p>
+				To access the item store, click your coins in the bottom-left corner.
+				You can also press the down arrow or the Y button on a controller.
+			</p>
 
-		<img src="assets/art/tutorial/effect.png"><br>
-		<p>
-			This is an effect (gray border). Diffrent effect cards do diffrent things, but this one heals you the number of points equal to its value.
-		</p>
+			<img src="assets/art/tutorial/monster.png" /><br />
+			<p>
+				This is a monster (green border). When you move to it, you lose health
+				equal to its value.<br />
+			</p>
+			<p>
+				At the end of the game, your score is increased by the number and values
+				of any monsters you killed.
+			</p>
 
-		<img src="assets/art/tutorial/item.png"><br>
-		<p>
-			This card is an item. They do diffrent things, and they can be bought from the store for coins by clicking on them (Cost is in the bottom.)
-			You can also press arrow keys/left joy stick while the store is open to select a card, and then enter/the A button to buy a card.
-		</p>
-		<p>
-			You finished this tutorial! Go play the game!
-		</p>
-		<button class="back">Back to Menu</button><br><br>
+			<img src="assets/art/tutorial/effect.png" /><br />
+			<p>
+				This is an effect (gray border). Diffrent effect cards do diffrent
+				things, but this one heals you the number of points equal to its value.
+			</p>
 
-		<h1>A Word on Controllers</h1>
-		<p>
-			To use a controller, connect your computer to the controller and press a button. 
-			Then in then main menu you can click "Use Controller."
-		</p>
-		<p>
-			The button text should then change to the name of your contoller. If it doesn't, please make sure you followed the directions and the controller is supported.
-		</p>
-		<h3>Supported Contollers</h3>
-		<ul>
-			<li>Nindendo Joy-Cons</li>
-			<li>Xbox 360/One Controller</li>
-		</ul>
-	</div>
-	<script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-app.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-database.js"></script>
-	
-	<script>
-	</script>
-	<script src="assets/scripts/sound.js"></script>
-	<script src="assets/scripts/dragdrop.js"></script>
-	<script src="assets/scripts/mapper.js"></script>
-	<script src="assets/scripts/cards/create.js"></script>
-	<script src="assets/scripts/cards/generate.js"></script>
-	<script src="assets/scripts/death.js"></script>
-	<script src="assets/scripts/difficulty.js"></script>
-	<script src="assets/scripts/engine.js"></script>
-	<script src="assets/scripts/highscores.js"></script>
-	<script src="assets/scripts/heroSelect.js"></script>
-	<script src="assets/scripts/keyboard.js"></script>
-	<script src="assets/scripts/gamepad.js"></script>
-	<script src="assets/scripts/store.js"></script>
-</body>
+			<img src="assets/art/tutorial/item.png" /><br />
+			<p>
+				This card is an item. They do diffrent things, and they can be bought
+				from the store for coins by clicking on them (Cost is in the bottom.)
+				You can also press arrow keys/left joy stick while the store is open to
+				select a card, and then enter/the A button to buy a card.
+			</p>
+			<p>
+				You finished this tutorial! Go play the game!
+			</p>
+			<button class="back">Back to Menu</button><br /><br />
+
+			<h1>A Word on Controllers</h1>
+			<p>
+				To use a controller, connect your computer to the controller and press a
+				button. Then in then main menu you can click "Use Controller."
+			</p>
+			<p>
+				The button text should then change to the name of your contoller. If it
+				doesn't, please make sure you followed the directions and the controller
+				is supported.
+			</p>
+			<h3>Supported Contollers</h3>
+			<ul>
+				<li>Nindendo Joy-Cons</li>
+				<li>Xbox 360/One Controller</li>
+			</ul>
+		</div>
+		<script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-app.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-database.js"></script>
+
+		<script></script>
+		<script src="assets/scripts/sound.js"></script>
+		<script src="assets/scripts/dragdrop.js"></script>
+		<script src="assets/scripts/mapper.js"></script>
+		<script src="assets/scripts/cards/create.js"></script>
+		<script src="assets/scripts/cards/generate.js"></script>
+		<script src="assets/scripts/death.js"></script>
+		<script src="assets/scripts/difficulty.js"></script>
+		<script src="assets/scripts/engine.js"></script>
+		<script src="assets/scripts/highscores.js"></script>
+		<script src="assets/scripts/heroSelect.js"></script>
+		<script src="assets/scripts/keyboard.js"></script>
+		<script src="assets/scripts/gamepad.js"></script>
+		<script src="assets/scripts/store.js"></script>
+	</body>
 </html>
