Add monster potion

--- a/assets/font/icons/dm-icons/demo.html
+++ b/assets/font/icons/dm-icons/demo.html
@@ -9,24 +9,10 @@
     <link rel="stylesheet" href="style.css"></head>
 <body>
     <div class="bgc1 clearfix">
-        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> dm-icons <small class="fgc1">(Glyphs:&nbsp;2)</small></h1>
+        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;4)</small></h1>
     </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: Unknown</h1>
-        <div class="glyph fs1">
-            <div class="clearfix bshadow0 pbs">
-                <span class="icon-skull"></span>
-                <span class="mls"> icon-skull</span>
-            </div>
-            <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="73" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#x73;" class="unitRight size1of2 talign-right" />
-            </fieldset>
-            <div class="fs0 bshadow0 clearfix hidden-true">
-                <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="" class="liga unitRight" />
-            </div>
-        </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-coin"></span>
@@ -35,6 +21,48 @@
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="63" class="unit size1of2" />
                 <input type="text" maxlength="1" readonly value="&#x63;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-down"></span>
+                <span class="mls"> icon-down</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="76" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#x76;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-skull"></span>
+                <span class="mls"> icon-skull</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="78" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#x78;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-up"></span>
+                <span class="mls"> icon-up</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="5e" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#x5e;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
@@ -53,7 +81,7 @@
         </label>
         <input id="testText" type="text" class="phl size1of1 mvl"
         placeholder="Type some text to test..." value=""/>
-        <div id="testDrive" class="icon-" style="font-family: dm-icons">&nbsp;
+        <div id="testDrive" class="icon-" style="font-family: icomoon">&nbsp;
         </div>
     </div>
     <!--<![endif]-->
