--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<body>
 		<div id="main-menu">
 			<img id="title-image" src="assets/art/menu.png" />
-			<span class="version">v1.3.5-beta</span>
+			<span class="version">v1.3.6-beta</span>
 			<span id="play-button" class="menu-button">Play</span>
 			<span id="tutorial-button" class="menu-button">Tutorial</span>
 			<span id="hero-button" class="menu-button">Heroes</span>
@@ -216,6 +216,7 @@
 		<script src="assets/scripts/cards/generate.js"></script>
 		<script src="assets/scripts/death.js"></script>
 		<script src="assets/scripts/difficulty.js"></script>
+		<script src="assets/scripts/gameTable.js"></script>
 		<script src="assets/scripts/engine.js"></script>
 		<script src="assets/scripts/highscores.js"></script>
 		<script src="assets/scripts/heroSelect.js"></script>
