Add new type of card and small bug fixes/tidying Incuding: - Card type CSS - Retook photos for tutorail - Add seedling card and Monster Effect card type - Add light green and purple frames - Fix fuzzy images using image-rendering on img elements and frames

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<body>
 		<div id="main-menu">
 			<img id="title-image" src="assets/art/menu.png" />
-			<span class="version">v1.3.7-beta</span>
+			<span class="version">v1.3.8-beta</span>
 			<span id="play-button" class="menu-button">Play</span>
 			<span id="tutorial-button" class="menu-button">Tutorial</span>
 			<span id="hero-button" class="menu-button">Heroes</span>
@@ -163,8 +163,8 @@
 
 			<img src="assets/art/tutorial/monster.png" /><br />
 			<p>
-				This is a monster (green border). When you move to it, you lose health
-				equal to its value.<br />
+				This is a monster (dark green border). When you move to it, you lose
+				health equal to its value.<br />
 			</p>
 			<p>
 				At the end of the game, your score is increased by the number and values
@@ -175,6 +175,17 @@
 			<p>
 				This is an effect (gray border). Diffrent effect cards do diffrent
 				things, but this one heals you the number of points equal to its value.
+			</p>
+
+			<img src="assets/art/tutorial/monster-effect.png" /><br />
+			<p>
+				This is a monster-effect (light green border). It's a mix of the
+				previous two types, so when you move to it, you lose health equal to its
+				value, <i>and</i>, it acts as an effect card (Usually it is a negitive
+				effect).<br />
+				This card give all Willow Wisps (a type of monster) +1 value (indecated
+				by the
+				<span class="icon-up" style="font-size: 15px;"></span> .)
 			</p>
 
 			<img src="assets/art/tutorial/item.png" /><br />
